--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.17",
+    "thirdweb": "^5.99.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
